--- a/.fixtures.yml
+++ b/.fixtures.yml
@@ -1,6 +1,10 @@
 fixtures:
   repositories:
-    apt: "https://github.com/puppetlabs/puppetlabs-apt.git"
-    stdlib: "https://github.com/puppetlabs/puppetlabs-stdlib.git"
+    apt:
+      repo: "https://github.com/puppetlabs/puppetlabs-apt.git"
+      ref: "2.0.0"
+    stdlib:
+      repo: "https://github.com/puppetlabs/puppetlabs-stdlib.git"
+      ref: "4.6.0"
   symlinks:
     fluentd: "#{source_dir}"
