added debian support

--- a/spec/acceptance/nodesets/ubuntu-server-1204-x64.yml
+++ b/spec/acceptance/nodesets/ubuntu-server-1204-x64.yml
@@ -6,5 +6,5 @@ HOSTS:
     box: puppetlabs/ubuntu-12.04-64-nocm
     hypervisor: vagrant
 CONFIG:
-  log_level: verbose
+  log_level: info
   type: foss
