--- a/spec/fixtures/files/source_tail.conf
+++ b/spec/fixtures/files/source_tail.conf
@@ -2,5 +2,13 @@
   type tail
   format json
   path /var/log/test-application/*.json
+  <parse>
+    type regexp
+    expression ^(?<name>[^ ]*) (?<user>[^ ]*) (?<age>\d*)$
+  </parse>
+  <storage>
+    type local
+    path test.pos
+  </storage>
   tag application.test
 </source>
